idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/duplicateExpectsExplicit/bottom/bottom.kt
actual class <!AMBIGUOUS_EXPECTS("Actual class 'A'", "right.kt, left.kt")!>A<!>